src/scss/layout/_header.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
    background-color: var(--white);
    padding: 31px 80px 31px 90px;
}

.header__item, .header___link {
    @include fontStyle( var(--fontcolor), 16px);
    line-height: 18px;
    text-decoration: none;
}

.header__logo {
    display: flex;
    align-items: center;
}

.header__logo .header__image {
    margin-top: -3px;
    width: 41.2px;
    height: 44.47px;
}

.header__logo p {
    @include fontStyle(var(--fontcolorlogo), 14px);
    line-height: 16px;
    margin-left: 12.8px;
    margin-top: 2px;
    margin-bottom: 0px;
}

.header__links {
    list-style: none;

    .header__item {
        display: inline-block;
        padding-left: 30px;
    }

    .header__item .header__btn {
        background-color: var(--btndonacion);
        padding: 11px 42px;
        border-radius: 30px;
        cursor: pointer;
        border: var(--white);
    }
}

